--- a/pages/RandomQuotes.css
+++ b/pages/RandomQuotes.css
@@ -16,16 +16,27 @@ body {
     font-size: 30pt;
 }
 
-#content {
-    /*background-color: rgba(140, 205, 232, 0.47);
-    */
+#floater {
+    margin: auto;
+    position: absolute;
+    height: 30em;
 
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+#content {
+
+    margin: auto;
     background-color: white;
 
     border-style: inset;
     border-width: 2px;
     border-radius: 10px;
 
+    height: 100%;
+
     padding: 3%;
-    margin-bottom: 3%;
 }
