--- a/templates/base.css
+++ b/templates/base.css
@@ -7,3 +7,22 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+#content {
+
+    margin: auto;
+    background-color: white;
+
+    border-style: inset;
+    border-width: 2px;
+    border-radius: 10px;
+
+    padding: 3%;
+}
+
+.content {
+    padding: 2%;
+    background-color: white;
+
+    border-radius: 10px;
+}
